Fixed the alignment of titles and images

--- a/css/style.css
+++ b/css/style.css
@@ -55,4 +55,5 @@
     width: 80%;
     align-self: center;
     padding-bottom: 20px;
+    height: 80px;
 }
